--- a/css/color.css
+++ b/css/color.css
@@ -20,7 +20,7 @@ ul.gt_hdr3_scl_icon li:hover a,
 .gt_hdr3_search input[type="submit"]:hover,
 .gt_hdr3_search button:hover,
 /*Banner Services CSS*/
-.gt_slide_1 h2,
+/*.gt_slide_1 h2,*/
 /*Offer Wrap CSS*/
 .gt_wht_offer_des h5 > a:hover,
 /*Popular Courses CSS*/
