Gallery and images

--- a/css/color.css
+++ b/css/color.css
@@ -614,7 +614,7 @@ ul.gt_product_ui_element li a i,
 .gt_team2_wrap:hover figure:before,
 .gt_team2_wrap:hover .gt_team_scl_icon ul,
 /*Blog Css*/
-.gt_blog_wrap:hover .gt_blog_figcaption
+/*.gt_blog_wrap:hover .gt_blog_figcaption*/
 /*footer css*/
 /*About Us Css*/
 /*Comming Soon Css*/
