--- a/css/responsive.css
+++ b/css/responsive.css
@@ -108,7 +108,6 @@
 	.gt_banner_text.gt_slide_1 h2{font-size: 50px;line-height: 40px;}
 	.gt_banner_text.gt_slide_2 h3{font-size: 25px;line-height: 25px;margin: 0px 0px 5px;}
 	.gt_banner_text.gt_slide_2 h2{font-size: 30px;line-height: 28px;margin: 0px 0px 5px;}
-	.gt_slide_2{margin: -70px 0 0;}
 	.gt_banner_text > a{font-size: 12px;padding: 9px 20px;}
 	.gt_slide_3{margin: -80px 0 0 -390px;}
 	.gt_banner_text.gt_slide_3 h3{font-size: 40px;line-height: 40px;margin: 0px 0px 5px;}
@@ -146,6 +145,8 @@
 	.gt_hdr_3_ui_element ul li{width: 100%;border-right:0px;}
 	.gt_hdr_3_ui_element ul li:last-child{border-right: 0px;}
 	.gt_course_tab_list ul li{margin-bottom: 5px;}
+	.gt_slide_2 {}
+	.gt_banner_text.gt_slide_2 h4{font-size: 16px;line-height: 14px;}
 	.gt_banner_text.gt_slide_1 h3{font-size: 30px;line-height: 30px;}
 	.gt_banner_text.gt_slide_1 h2{font-size: 30px;line-height: 20px;}
 	.gt_slide_3{margin: -65px 0 0 -320px;}
